[package]
name = "hackpack"
version = "0.1.0"
authors = ["SCool62"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "tank-plant"
path = "src/bin/tank_plant.rs"
test = false
bench = false

[dependencies]
ufmt = "0.2.0"
nb = "1.1.0"
embedded-hal = "1.0"
avr-device = "0.8.1"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "ff4909c00ceee76d60f8bd7cc95bc0f3e2ab673f"
features = ["arduino-nano"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
